<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >
        <TextView
            android:id="@+id/text_Temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_100"
            android:layout_marginStart="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/temperature"
            />
        <Spinner
            android:id="@+id/spinner_Temperature"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@id/text_Temperature"
            android:layout_toRightOf="@id/text_Temperature"
            />
        <TextView
            android:id="@+id/text_CurrentTemperature"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_below="@id/text_Temperature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/custom_shape"
            android:gravity="center"
            android:textColor="@color/color_text_currentTemperature"
            />
        <TextView
            android:id="@+id/text_Low"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_Temperature"
            android:layout_marginEnd="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_toLeftOf="@id/text_CurrentTemperature"
            android:layout_toStartOf="@id/text_CurrentTemperature"
            android:gravity="center"
            android:text="@string/low"
            />
        <TextView
            android:id="@+id/text_Hight"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_Temperature"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_toEndOf="@id/text_CurrentTemperature"
            android:layout_toRightOf="@id/text_CurrentTemperature"
            android:gravity="center"
            android:text="@string/hight"
            />
        <TextView
            android:id="@+id/text_LowTemperature"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_Low"
            android:layout_marginEnd="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:layout_toLeftOf="@id/text_CurrentTemperature"
            android:layout_toStartOf="@id/text_CurrentTemperature"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/text_HightTemperature"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_Low"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_toEndOf="@id/text_CurrentTemperature"
            android:layout_toRightOf="@id/text_CurrentTemperature"
            android:gravity="center"
            />
        <ImageView
            android:id="@+id/image_iconWeather_current"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_below="@id/text_CurrentTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/icon_weather"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <TextView
            android:id="@+id/text_LabelVelocitySpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:text="@string/velocity_speed"
            />
        <TextView
            android:id="@+id/text_VelocitySpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_toEndOf="@id/text_LabelVelocitySpeed"
            android:layout_toRightOf="@id/text_LabelVelocitySpeed"
            />
        <Spinner
            android:id="@+id/spinner_VelocitySpeed"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@id/text_VelocitySpeed"
            android:layout_toRightOf="@id/text_VelocitySpeed"
            />
        <TextView
            android:id="@+id/text_LabelHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelVelocitySpeed"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/humidity"
            />
        <TextView
            android:id="@+id/text_humidity_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelVelocitySpeed"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@id/text_LabelHumidity"
            android:layout_toRightOf="@id/text_LabelHumidity"
            />
        <TextView
            android:id="@+id/text_LabelUVIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelHumidity"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/uv_index"
            />
        <TextView
            android:id="@+id/text_UVIndex_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelHumidity"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@id/text_LabelHumidity"
            android:layout_toRightOf="@id/text_LabelHumidity"
            />
        <TextView
            android:id="@+id/text_LabelVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelUVIndex"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/visibility"
            />
        <TextView
            android:id="@+id/text_visibility_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_LabelUVIndex"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_toEndOf="@id/text_LabelVisibility"
            android:layout_toRightOf="@id/text_LabelVisibility"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_WeatherHours"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>
